--- a/EinzelhandelCoreMVC/appsettings.json
+++ b/EinzelhandelCoreMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=SHAHED-PC\\SHDSQL;Database=DBEinzelhandel;Trusted_Connection=True;"
+  }
 }
