--- a/EinzelhandelCoreMVC/EinzelhandelCoreMVC.csproj
+++ b/EinzelhandelCoreMVC/EinzelhandelCoreMVC.csproj
@@ -14,4 +14,14 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.All" />
+    <PackageReference Include="Microsoft.AspNetCore.NodeServices" Version="2.2.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Update="wwwroot\js\jquery.filtertable.min.js">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
